# fermat-mcp

./: Dockerfile  README.md  proxy.py  pyproject.toml  server.py
.github/workflows/: docker-build.yml  docker-publish.yml
mathduke/numpy_mcp/: server.py
mathduke/sympy_mcp/: server.py
test/: test_server.py
test/test_mpl/: test_bar_chart.py  test_eqn_chart.py  test_plot_chart.py  test_scatter_chart.py  test_stack_chart.py  test_stem_chart.py
