[project]
name = "mathduke"
version = "0.1.0"
description = "MCP Server for mathematical computation and plotting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "smithery>=0.4.2",
    "sympy>=1.14.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mathduke"]

